Bump required java version from 8 to 16